adjusted google tag

--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@ html{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale}.menu
 <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon-d4f342.png">
 <meta name="msapplication-TileImage" content="images/mstile-144x144-62a9af.png">
 <link rel="manifest" href="manifest.json" crossOrigin="use-credentials">
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','G-9MF73KCWK5');</script>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','G-WFL3QBEVT9');</script>
 <script>!function(){var A=new Image;A.onload=A.onerror=function(){1==A.height&&(document.documentElement.className+=" webp")},A.src="data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAD8D+JaQAA3AA/ua1AAA"}();</script>
-<link onload="this.media='all';this.onload=null;" rel="stylesheet" href="css/site.c85949.css" media="print">
+<link onload="this.media='all';this.onload=null;" rel="stylesheet" href="css/site.2bef71.css" media="print">
 <!--[if lte IE 7]>
-<link rel="stylesheet" href="css/site.c85949-lteIE7.css" type="text/css">
+<link rel="stylesheet" href="css/site.2bef71-lteIE7.css" type="text/css">
 <![endif]-->
 <!--[if lte IE 8]>
-<link rel="stylesheet" href="css/site.c85949-lteIE8.css" type="text/css">
+<link rel="stylesheet" href="css/site.2bef71-lteIE8.css" type="text/css">
 <![endif]-->
 <!--[if gte IE 9]>
-<link rel="stylesheet" href="css/site.c85949-gteIE9.css" type="text/css">
+<link rel="stylesheet" href="css/site.2bef71-gteIE9.css" type="text/css">
 <![endif]-->
 </head>
 <body id="b">
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=G-9MF73KCWK5" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=G-WFL3QBEVT9" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="v6 ps26 s29 c24">
 <a href="#" style="display:block;"><div class="ps27"></div><div class="v7 ps28 s30 c25"><div class="ps29 v6 s31"><div class="s32"><div class="v7 ps30 s33 c26"><div class="v7 ps31 s34 c27"><p class="p5 f15">Calmer</p></div><div class="v7 ps32 s35 c28"><h3 class="p5 f16">Press button&hellip; get better results. Calmer heads prevail.</h3></div><div class="v7 ps33 s36 c29"><h2 class="p6 f17">Head</h2></div></div></div></div></div></a>
 </div>
@@ -45,7 +45,7 @@ html{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale}.menu
 <h3 class="p6 f19">SCROLL DOWN FOR MORE</h3>
 </div>
 <div class="v8 ps37 s43 c33">
-<ul class="menu-dropdown-1 v9 ps30 s43 m2" id="m2">
+<ul class="menu-dropdown-2 v9 ps30 s43 m2" id="m3">
 <li class="v7 ps30 s43 mit2">
 <a href="#anchor2" class="ml2"><div class="menu-content mcv2"><div class="v7 ps30 s44 c34"><div class="v7 ps38 s45 c35"><p class="p7 f20">NEXT</p></div></div></div></a>
 </li>
@@ -84,7 +84,7 @@ html{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale}.menu
 <h3 class="p1 f4">SCROLL DOWN FOR MORE</h3>
 </div>
 <div class="v2 ps4 s4 c4">
-<ul class="menu-dropdown-2 v3 ps5 s4 m1" id="m3">
+<ul class="menu-dropdown-1 v3 ps5 s4 m1" id="m2">
 <li class="v1 ps5 s4 mit1">
 <a href="#anchor3" class="ml1"><div class="menu-content mcv1"><div class="v1 ps5 s5 c5"><div class="v1 ps6 s6 c6"><p class="p3 f5">NEXT</p></div></div></div></a>
 </li>
@@ -194,7 +194,7 @@ html{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale}.menu
 <div class="c23">
 </div>
 <div class="menu-device"></div>
-<script>dpth="/";!function(){var s=["js/jquery.7b1b8b.js","js/fixed.7b1b8b.js","js/jqueryui.7b1b8b.js","js/menu.7b1b8b.js","js/menu-dropdown-animations.7b1b8b.js","js/menu-dropdown.c85949.js","js/menu-dropdown-1.c85949.js","js/menu-dropdown-2.c85949.js","js/stickyfill.7b1b8b.js","js/index.c85949.js"],n={},j=0,e=function(e){var o=new XMLHttpRequest;o.open("GET",s[e],!0),o.onload=function(){if(n[e]=o.responseText,10==++j)for(var t in s){var i=document.createElement("script");i.textContent=n[t],document.body.appendChild(i)}},o.send()};for(var o in s)e(o)}();
+<script>dpth="/";!function(){var s=["js/jquery.7b1b8b.js","js/fixed.7b1b8b.js","js/jqueryui.7b1b8b.js","js/menu.7b1b8b.js","js/menu-dropdown-animations.7b1b8b.js","js/menu-dropdown.2bef71.js","js/menu-dropdown-1.2bef71.js","js/menu-dropdown-2.2bef71.js","js/stickyfill.7b1b8b.js","js/index.2bef71.js"],n={},j=0,e=function(e){var o=new XMLHttpRequest;o.open("GET",s[e],!0),o.onload=function(){if(n[e]=o.responseText,10==++j)for(var t in s){var i=document.createElement("script");i.textContent=n[t],document.body.appendChild(i)}},o.send()};for(var o in s)e(o)}();
 </script>
 <script type="text/javascript">
 var ver=RegExp(/Mozilla\/5\.0 \(Linux; .; Android ([\d.]+)/).exec(navigator.userAgent);if(ver&&parseFloat(ver[1])<5){document.getElementsByTagName('body')[0].className+=' whitespacefix';}
