update page title
s/hed/head/

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Calmer Heds is the most powerful grammar checker rewrite</title>
+<title>Calmer Heads is the most powerful grammar checker rewrite</title>
 <meta name="referrer" content="same-origin">
 <meta name="description" content="The most powerful grammar checker you've ever used. With the click of a button it will re-write whole sentences to change the tone of your email to be more positive.">
 <link rel="canonical" href="https://www.calmerhead.com/">
